--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
+    "@tsparticles/react": "^3.0.0",
+    "tsparticles-slim": "^2.12.0",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -45,7 +48,9 @@
     "geist": "^1.3.0",
     "genkit": "^1.8.0",
     "lucide-react": "^0.475.0",
+    "mongoose": "^8.5.1",
     "next": "15.2.3",
+    "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -57,6 +62,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
