I see this error with the app, reported by NextJS, please fix it. The error is reported as HTML but presented visually to the user).
A > before the line number in the error source usually indicates the line of interest:

> Unhandled Runtime Error: Error: drawer.validTypes is not iterable. Error source: src/components/particle-background.tsx (16:7) @ async ParticleBackground.useEffect
>
>   14 |   useEffect(() => {
>   15 |     initParticlesEngine(async (engine) => {
> > 16 |       await loadSlim(engine);
>      |       ^
>   17 |     }).then(() => {
>   18 |       setInit(true);
>   19 |     });
>
> Call Stack
> 5
>
> Show 4 ignore-listed frame(s)
> async ParticleBackground.useEffect
> src/components/particle-background.tsx (16:7)

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
     "@tsparticles/react": "^3.0.0",
-    "tsparticles-slim": "^2.12.0",
+    "@tsparticles/slim": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
